# imgsearch-client

./: .env  .gitignore  LICENSE  README.md  ROADMAP.md  next.config.js  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
.roo/rules-code/: rules.md
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  auth_api.rs  db.rs  error.rs  image.rs  image_idx.rs  image_utils.rs  main.rs  path_utils.rs  uuid_utils.rs
src-tauri/src/image_api/: idx.rs  mod.rs
src-tauri/src/image_command/: api.rs  idx.rs  mod.rs  utils.rs
src-tauri/src/server/: imgsearch_server.rs  mod.rs
src/app/: layout.tsx  page.tsx
src/app/auth/: page.tsx
src/app/guide/: page.tsx
src/app/images/: page.tsx
src/app/imgdir/: page.tsx
src/app/privacy/: page.tsx
src/app/search/: page.tsx
src/app/search/components/: album-artwork.tsx
src/app/terms/: page.tsx
src/app/token/: page.tsx
src/components/: Initing.tsx  about-dialog.tsx  check-guide.tsx  examples-nav.tsx  menu.tsx  startup.tsx
src/components/ui/: dialog.tsx
src/data/: auth.ts  config.ts  db.ts  file-tools.ts  guide.ts  image.ts  img-dirs.ts  img-vec-idx.ts  img.ts  index.ts  server-item.ts  server.ts
src/servers/: imgsearch-official.ts  index.ts  replicate.ts
