[package]
name = "imgsearch-client"
version = "0.1.0"
description = ""
authors = ["ymk"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=2.3.0", features = [] }

[dependencies]
tauri = { version = "2.6.2", features = ["protocol-asset", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-store = "=2.3.0"
tauri-plugin-os = "=2.3.0"
tauri-plugin-shell = "=2.3.0"
tauri-plugin-dialog = "=2.3.0"
tauri-plugin-fs = { version = "=2.4.0", features = ["watch"] }
tauri-plugin-http = { version = "=2.5.0", features = [
    "multipart",
    "json",
    "stream",
] }
tauri-plugin-log = "2"
log = "0.4"
uuid = { version = "1.17.0", features = ["v4"] }
thiserror = "2.0.12"
bytes = "1.10.*"
fast_image_resize = { version = "5.1.3", features = ["image"] }
image = { version = "0.25.6", features = ["jpeg", "png", "webp"] }
dirs = "6.0.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

# Optimized for bundle size. If you want faster builds comment out/delete this section.
[profile.release]
lto = true        # Enable Link Time Optimization
opt-level = "z"   # Optimize for size.
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = "abort"   # Abort on panic
strip = true      # Automatically strip symbols from the binary.
debug = false
